--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pinusmod-kcp",
-    "version": "1.0.8",
+    "version": "1.0.9",
     "description": "用于 pinus (ts 版 pomelo)，提供一个 kcp 的 connector",
     "main": "./dist/index.js",
     "scripts": {
@@ -18,15 +18,20 @@
     "author": "bruce48x",
     "license": "MIT",
     "dependencies": {
-        "@types/node": "^8.10.51",
         "node-kcp-x": "^0.2",
         "pinusmod": "^1.4.19",
         "pinusmod-protobuf": "^1.4.19",
-        "pinusmod-protocol": "^1.4.19",
-        "typescript": "^2.9.2"
+        "pinusmod-protocol": "^1.4.19"
     },
     "devDependencies": {
-        "@types/mqtt-connection": "git+https://github.com/node-pinus/types-mqtt-connection.git"
+        "@types/async": "^3.2.3",
+        "@types/crc": "^3.4.0",
+        "@types/mqtt-connection": "git+https://github.com/node-pinus/types-mqtt-connection.git",
+        "@types/node": "^8.10.51",
+        "@types/socket.io": "^2.1.8",
+        "@types/uuid": "^8.0.0",
+        "@types/ws": "^7.2.6",
+        "typescript": "^3.9.6"
     },
     "bugs": {
         "url": "https://github.com/bruce48x/pinus-kcp/issues"
